hasRole, update articleRepo, filter author, logged user, principal, filter cat,  file-size, btn-login/roles, btn-nav, style var

--- a/java-blog/src/main/resources/application.properties
+++ b/java-blog/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.web.resources.static-locations=classpath:/static/,classpath:/static/img/,classpath:/static/uploads/
 
+# Imposta il limite massimo per un singolo file
+spring.servlet.multipart.max-file-size=10MB
+
+# Imposta il limite massimo per l'intera richiesta multipart
+spring.servlet.multipart.max-request-size=10MB
