signUp, toggle psw

--- a/java-blog/src/main/resources/application.properties
+++ b/java-blog/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-spring.web.resources.static-locations=classpath:/static/,classpath:/static/img/,classpath:/static/uploads/
+spring.web.resources.static-locations=classpath:/static/,classpath:/static/img/,classpath:/static/uploads/,classpath:/static/js/
 
 # Imposta il limite massimo per un singolo file
 spring.servlet.multipart.max-file-size=10MB
