--- a/java-blog/pom.xml
+++ b/java-blog/pom.xml
@@ -73,7 +73,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
+			<artifactId>jackson-annotations</artifactId>
 		</dependency>
 	</dependencies>
 
