--- a/java-blog/src/main/resources/application.properties
+++ b/java-blog/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=javablog
 
 #data source
-spring.datasource.url=jdbc:mysql://localhost:3306/db_javablog
-spring.datasource.username=root
-spring.datasource.password=rootroot
+# spring.datasource.url=jdbc:mysql://localhost:3306/db_javablog
+# spring.datasource.username=root
+# spring.datasource.password=rootroot
  
 
 ## Hibernate Properties
