edit details docker behaviour

--- a/java-blog/Dockerfile
+++ b/java-blog/Dockerfile
@@ -7,6 +7,9 @@ WORKDIR /app
 # Copia il jar costruito da Maven dentro il container
 COPY target/java-blog-0.0.1-SNAPSHOT.jar app.jar
 
+RUN ls -l /app
+
+
 # Espone la porta 8080 (default di Spring Boot)
 EXPOSE 8080
 
