--- a/java-blog/pom.xml
+++ b/java-blog/pom.xml
@@ -98,6 +98,9 @@
 				<version>3.3.2</version> <!-- allinea con la versione spring boot parent -->
 				<configuration>
 					<mainClass>it.ludo.javablog.JavaBlogApplication</mainClass>
+					<profiles>
+						<profile>local</profile>
+					</profiles>
 				</configuration>
 				<executions>
 					<execution>
