--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,20 @@
 {
     "configurations": [
+    
+        {
+            "type": "java",
+            "name": "JavaBlogApplication",
+            "request": "launch",
+            "mainClass": "it.ludo.javablog.JavaBlogApplication",
+            "projectName": "java-blog"
+        },
         {
             "type": "java",
             "name": "JavaBlogApplication",
             "request": "launch",
             "mainClass": "it.ludo.JavaBlogApplication",
-            "projectName": "java-blog"
+            "projectName": "java-blog",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=58265 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=java-blog"
         },
         {
             "type": "java",
